# gam2c

./: .gitignore  CMakeLists.txt  DkLibraryEnvironment.cpp  DkLibraryEnvironment.hpp  IoData.cpp  IoData.hpp  Main.cpp  MyJEGAOptimizer.cpp  MyJEGAOptimizer.hpp  MyLibraryTargets.cmake  version.h
parser/: Assigner.C  Assigner.h  AssignerCore.C  CustomArray.h  Lexer.C  Lexer.l  Parser.output  Parser.tab.cpp  Parser.tab.h  Parser.y
